--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-scripts": "5.0.1",
     "sass": "^1.69.7",
     "swiper": "^11.0.7",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yet-another-react-lightbox": "^3.17.1"
   },
   "scripts": {
     "start": "react-scripts start",
