--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-lazy-load-image-component": "^1.6.0",
     "react-router-dom": "^6.21.2",
     "react-scripts": "5.0.1",
+    "react-toastify": "^10.0.5",
     "sass": "^1.69.7",
     "swiper": "^11.0.7",
     "web-vitals": "^2.1.4",
