--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.14.2",
+    "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
     "mui": "^0.0.1",
     "react": "^18.2.0",
